# git-diff-filter

./: Cargo.toml  Dockerfile  README.md  action.yml  justfile
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: release.yml
docs/: implementation-plan.md
src/: cli.rs  config.rs  git.rs  main.rs  match.rs  matcher.rs  output.rs
