[package]
name = "git-diff-filter"
version = "0.1.0"
edition = "2021"

[dependencies]

[lints.clippy]
pedantic = "warn"

[profile.release]
opt-level = "z"       # Optimize for size
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Reduce number of codegen units to increase optimizations
strip = "debuginfo"   # Strip debug info but keep symbols for stack traces

[[bin]]
name = "gdf"
path = "src/main.rs"
